<resources>
    <string name="app_name">APIs</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="iphone_x">Iphone x</string>
    <string name="category">Smartphone</string>
    <string name="price">Price: 700$</string>
    <string name="brand">Apple</string>
    <string name="discount">OFF: 14%</string>
    <string name="tech_shop">Tech Shop</string>
    <string name="rating">rating</string>
</resources>