<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:elevation="16dp"
    app:cardCornerRadius="4dp"
    android:layout_marginHorizontal="5dp"
    android:layout_marginVertical="5dp"
    android:focusable="true">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="8dp"
        android:paddingVertical="16dp"
        >

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:scaleType="centerCrop"
            android:src="@drawable/image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/productImage"
            android:contentDescription="@string/app_name"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:ellipsize="end"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:text="@string/brand"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/productImage"
            app:layout_constraintEnd_toEndOf="@id/productImage"
            app:layout_constraintStart_toStartOf="@id/productImage"
            android:id="@+id/productBrand"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:ellipsize="end"
            android:text="@string/iphone_x"
            app:layout_constraintTop_toTopOf="@id/productImage"
            app:layout_constraintStart_toEndOf="@id/productImage"
            android:layout_marginHorizontal="10dp"
            android:id="@+id/productTitle"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:ellipsize="end"
            android:text="@string/price"
            app:layout_constraintTop_toBottomOf="@id/productTitle"
            app:layout_constraintStart_toStartOf="@id/productTitle"
            android:id="@+id/productPrice"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:ellipsize="end"
            android:text="@string/discount"
            app:layout_constraintTop_toBottomOf="@id/productPrice"
            app:layout_constraintStart_toStartOf="@id/productTitle"
            android:id="@+id/productDiscount"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:textColor="#FF9800"
            android:textStyle="bold"
            android:ellipsize="end"
            android:text="Stock: 75"
            app:layout_constraintBottom_toBottomOf="@id/productBrand"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/productStock"
            />



    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>